# Crypto-bot

./: .env.example  .gitignore  Cargo.toml  README.md  pro_trading_bot.service  run_live.sh  run_paper.sh  setup.sh
.github/workflows/: ci.yml
crates/bot_advisor/: Cargo.toml
crates/bot_advisor/src/: lib.rs
crates/bot_config/: Cargo.toml
crates/bot_config/src/: lib.rs
crates/bot_db/: Cargo.toml
crates/bot_db/src/: lib.rs
crates/bot_exchange/: Cargo.toml
crates/bot_exchange/src/: binance.rs  lib.rs  paper.rs
crates/bot_indicators/: Cargo.toml
crates/bot_indicators/src/: lib.rs
crates/bot_learning/: Cargo.toml
crates/bot_learning/src/: lib.rs
crates/bot_risk/: Cargo.toml
crates/bot_risk/src/: lib.rs
crates/bot_scanner/: Cargo.toml
crates/bot_scanner/src/: lib.rs
crates/bot_signals/: Cargo.toml
crates/bot_signals/src/: lib.rs
crates/bot_smc/: Cargo.toml
crates/bot_smc/src/: lib.rs
crates/bot_telegram/: Cargo.toml
crates/bot_telegram/src/: lib.rs
crates/bot_types/: Cargo.toml
crates/bot_types/src/: lib.rs
src/: main.rs
