[package]
name    = "bot_db"
version.workspace = true
edition.workspace = true

[dependencies]
bot_types    = { workspace = true }
rusqlite     = { workspace = true }
tokio        = { workspace = true }
chrono       = { workspace = true }
rust_decimal = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
async-trait  = { workspace = true }
uuid         = { workspace = true }
