[package]
name    = "bot_exchange"
version.workspace = true
edition.workspace = true

[dependencies]
bot_types    = { workspace = true }
bot_config   = { workspace = true }
tokio        = { workspace = true }
reqwest      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
rust_decimal = { workspace = true }
chrono       = { workspace = true }
hmac         = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
async-trait  = { workspace = true }
tokio-retry  = { workspace = true }
