[package]
name    = "bot_risk"
version.workspace = true
edition.workspace = true

[dependencies]
bot_types   = { workspace = true }
bot_config  = { workspace = true }
bot_db      = { workspace = true }
tokio       = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
rust_decimal = { workspace = true }
