[package]
name    = "bot_telegram"
version.workspace = true
edition.workspace = true

[dependencies]
bot_types  = { workspace = true }
reqwest    = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
thiserror  = { workspace = true }
chrono     = { workspace = true }
rust_decimal = { workspace = true }
